<resources>
    <string name="app_name" translatable="false">Beauty Mentor</string>
    <string name="name" translatable="false">Beauty Mentor</string>
    <string name="currency" translatable="false">\u20B9</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="txtCredits" translatable="false"><a href="http://www.google.com">Google</a></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="wish_del" translatable="false">Are you sure!
    you want to delete this item</string>
    <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
    <string name="offer" translatable="false">Offer</string>
    <string name="start_time" translatable="false">Start Time :</string>
    <string name="end_time" translatable="false">End Time :</string>
    <string name="wallet" translatable="false">Wallet Used</string>
    <string name="coupon_used" translatable="false">Coupon Used</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="nav_home" translatable="false">Shop Now</string>
    <string name="nav_chat" translatable="false">Chat With Us</string>
    <string name="nav_user" translatable="false">User</string>
    <string name="nav_order" translatable="false">My Orders</string>
    <string name="nav_profile" translatable="false">My Profile</string>
    <string name="nav_support" translatable="false">Support</string>
    <string name="nav_about" translatable="false">About Us</string>
    <string name="failed" translatable="false">Sorry,Your Payment Has Failed</string>
    <string name="again" translatable="false">Please Try Again</string>
    <string name="retry" translatable="false">Retry Order</string>
    <string name="nav_review" translatable="false">Review Us</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_share" translatable="false">Share with Friends</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="btn_continue" translatable="false">Continue</string>
    <string name="btn_Register" translatable="false">Register</string>
    <string name="rewards_points" translatable="false">Rewards Points</string>
    <string name="rech_wallet" translatable="false">Recharge Wallet</string>
    <string name="continue_bt" translatable="false">Continue</string>
    <string name="wall_am" translatable="false">My Wallet Amount</string>
    <string name="et_login_phone_hint" translatable="false">Mobile Number</string>
    <string name="tv_login_email" translatable="false">Email</string>
    <string name="tv_login_password" translatable="false">Password</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="tv_login_note" translatable="false">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>
    <string name="tv_reg" translatable="false">Register</string>
    <string name="tv_reg_name_hint" translatable="false">Name</string>
    <string name="tv_reg_pincode" translatable="false">Pincode/Area Code/Zip</string>
    <string name="tv_reg_socity" translatable="false">Society/Flat</string>
    <string name="order_amount" translatable="false">Order Amount</string>
    <string name="btn_reg_socity_choose" translatable="false">Choose Society...</string>
    <string name="tv_reg_house" translatable="false">House Number</string>
    <string name="amount_pa" translatable="false">Amount Payable</string>
    <string name="add_del" translatable="false">Add delivery address</string>
    <string name="btn_reg_update" translatable="false">Update Profile</string>
    <string name="et_reg_search" translatable="false">Search Society...</string>
    <string name="et_sea" translatable="false">Search Society..</string>
    <string name="total" translatable="false">Total :</string>
    <string name="tv_reg_note" translatable="false">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address" translatable="false">Address(Required)</string>
    <string name="et_reg_address" translatable="false">Complete Address</string>
    <string name="use" translatable="false">Use</string>
    <string name="store" translatable="false">Store Pick Up</string>
    <string name="confirm_order" translatable="false">Confirm</string>
    <string name="pickup" translatable="false">Payment Mode</string>
    <string name="cash" translatable="false">Cash On Delivery</string>
    <string name="pay_now" translatable="false">Pay Now</string>
    <string name="tv_cart_title" translatable="false">Cart</string>
    <string name="debit" translatable="false">Debit / Credit Card</string>
    <string name="net" translatable="false">Net Banking</string>
    <string name="card" translatable="false">Cards</string>
    <string name="promo" translatable="false">Promo Code</string>
    <string name="tv_cart_clear" translatable="false">Clear All Product</string>
    <string name="tv_cart_checkout" translatable="false">Continue Checkout</string>
    <string name="tv_cart_total" translatable="false">Total:\u0020</string>
    <string name="tv_cart_item" translatable="false">Items:\u0020</string>
    <string name="tv_cart_rs" translatable="false">\u0020Rs</string>
    <string name="coupon" translatable="false">Coupon</string>
    <string name="sure_del" translatable="false">Are you sure!
    you want to delete all cart product</string>
    <string name="tv_del_title" translatable="false">Swipe for more options</string>
    <string name="tv_del_address" translatable="false">Delivery Address</string>
    <string name="et_del_address_hint" translatable="false">Enter Delivery address..</string>
    <string name="tv_del_continue" translatable="false">Continue With Time</string>
    <string name="tv_del_date" translatable="false">Select delivery date</string>
    <string name="tv_del_time" translatable="false">Select delivery time</string>
    <string name="tv_del_date_time" translatable="false">Delivery Data/Time</string>
    <string name="tv_total_item_amount" translatable="false">Total Items And Amount</string>
    <string name="tv_total_total" translatable="false">Total Amount </string>
    <string name="tv_home_cat" translatable="false">Products</string>
    <string name="tv_home_view" translatable="false">View all ></string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="tv_app_name" translatable="false">Wallet</string>
    <string name="tv_product_name" translatable="false">Products</string>
    <string name="selling_product" translatable="false">Top Selling Products</string>
    <string name="deals" translatable="false">Deals of the Day</string>
    <string name="view_all" translatable="false">View All</string>
    <string name="sponsered" translatable="false">Sponsored</string>
    <string name="shop_by_category" translatable="false">Shop By Category</string>
    <string name="shop_now" translatable="false">Shop Now</string>
    <string name="feature" translatable="false">Featured Brand</string>
    <string name="condition" translatable="false">Terms &amp; Condition</string>
    <string name="tv_toolbar_name" translatable="false">Rewards</string>
    <string name="tv_pro_add" translatable="false">Add Delivery Address</string>
    <string name="tv_pro_update" translatable="false">Update</string>
    <string name="tv_pro_price" translatable="false">Price per\u0020</string>
    <string name="tv_toolbar_price" translatable="false">Price :</string>
    <string name="tv_toolbar_redeem" translatable="false">Redeem</string>
    <string name="tv_out" translatable="false">Out of Stock</string>
    <string name="tv_rech" translatable="false">Enter Wallet Amount</string>
    <string name="tv_rech_wall" translatable="false">Recharge</string>
    <string name="tv_mywall" translatable="false">Recharge Wallet</string>
    <string name="tv_pro_rs" translatable="false">\u0020Rs.\u0020</string>
    <string name="tv_pro_total" translatable="false">Total: </string>
    <string name="tv_conf_order_title" translatable="false">Payment Details</string>
    <string name="tv_order_cancle" translatable="false">Cancel Order</string>
    <string name="tv_order_summery" translatable="false">Summary</string>
    <string name="tv_order_total" translatable="false">Total: Rs.</string>
    <string name="tv_order_qty" translatable="false">Qty</string>
    <string name="tv_order_rs" translatable="false">Rs.</string>
    <string name="tv_thanks_title" translatable="false">Thank you for your order.</string>
    <string name="tv_thanks_home" translatable="false">Continue home</string>
    <string name="tv_thanks_order" translatable="false">Track my order</string>
    <string name="thanks" translatable="false">Thanks Order</string>
    <string name="paytm" translatable="false">Paytm</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="my_order" translatable="false">My Order</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="delivery" translatable="false">Delivery</string>
    <string name="delivery_date" translatable="false">"Delivery Date: </string>
    <string name="please_select_date" translatable="false">Please select date</string>
    <string name="no_rcord_found" translatable="false">No record found</string>
    <string name="connection_time_out" translatable="false">Connection Time out</string>
    <string name="add_delivery_address" translatable="false">Add Delivery Address</string>
    <string name="order_now" translatable="false">Order Now</string>
    <string name="payment_detail" translatable="false">Payment Details</string>
    <string name="delivery_time" translatable="false">Delivery time</string>
    <string name="please_enter_pincode" translatable="false">Please enter pincode</string>
    <string name="receiver_mobile_number" translatable="false">Receiver Mobile Number(Required)</string>
    <string name="receiver_name_req" translatable="false">Receiver Name(Required)</string>
    <string name="phone_too_short" translatable="false">Mobile Number Too short</string>
    <string name="please_add_address">Please add address</string>
    <string name="pay" translatable="false">Payment</string>
    <string name="cancel_order" translatable="false">My Cancel Orders</string>
    <string name="please_select_address">Please select address</string>
    <string name="please_select_date_time">Please select date and time</string>
    <string name="profile_updated">Profile updated</string>
    <string name="uploading_profile_data">Uploading profile data</string>
    <string name="cancle_order_note">Are you sure!\nyou want to cancle order ?</string>
    <string name="no">No</string>
    <string name="order_id" translatable="false">Order Id</string>
    <string name="order_detail" translatable="false">Order Detail</string>
    <string name="yes">Yes</string>
    <string name="id" translatable="false">ID</string>
    <string name="order_mode" translatable="false">Order Mode</string>
    <string name="tracking_st" translatable="false">Tracking Status On</string>
    <string name="tt_t" translatable="false">Total Items</string>
    <string name="thank_you">Thank you</string>
    <string name="date_d" translatable="false">Date:</string>
    <string name="time_t" translatable="false">Time:</string>
    <string name="place_on" translatable="false">Placed On:</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="add_cart" translatable="false">Add items to it now</string>
</resources>