<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
   <!-- <item android:title=""></item>
    <item android:title=""></item>
<item android:title=""></item>
    <item android:title=""></item>
    <item android:title=""></item> -->


    <group
        android:id="@+id/group_shop_now"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop_now"
            android:icon="@drawable/ic_nav_home"
            android:title="Shop by Category" />
    </group>
    <group
        android:id="@+id/group_shop_brands"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop_brands"
            android:icon="@drawable/ic_nav_home"
            android:title="Shop by Brands" />
    </group>
    <group
        android:id="@+id/group_video"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/icons8_play_button_16px"
            android:iconTint="@color/white"
            android:title="Videos" />
    </group>
    <group
        android:id="@+id/group_my_profile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />
    </group>
   
    <!--<group-->
        <!--android:id="@+id/group_support"-->
        <!--android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_support"-->
            <!--android:icon="@drawable/ic_nav_support"-->
            <!--android:title="@string/nav_chat" />-->
    <!--</group>-->
    <group
        android:id="@+id/group_aboutus"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about" />
    </group>
    <group
        android:id="@+id/group_policy"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_nav_policy"
            android:title="@string/nav_terms" />
    </group>

    <group
        android:id="@+id/group_contact"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/nav_contact" />
    </group>
    <!--<group-->
        <!--android:id="@+id/group_review"-->
        <!--android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_review"-->
            <!--android:icon="@drawable/ic_nav_review"-->
            <!--android:title="@string/nav_review" />-->
    <!--</group>-->
    <group
        android:id="@+id/group_share"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_nav_share"
            android:title="@string/nav_share" />
    </group>

    <group
        android:id="@+id/group_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_logout" />
    </group>
    <!--<item
        android:id="@+id/nav_powerd"
        android:icon="@drawable/copy"
        android:title="@string/status_stop" />-->


</menu>
