<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/linear_cart"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cart_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_8"
            android:text="@string/tv_cart_clear"
            android:textColor="@color/colorPrimary"
            android:textAlignment="viewEnd"
            android:paddingEnd="@dimen/space_15"
            android:textSize="@dimen/space_15" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rel_empty_cart"
                android:visibility="gone"
                android:gravity="center"

                >
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:paddingRight="@dimen/space_20"
                    android:src="@drawable/icons8_shopping_bag_full_60px"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/empty_txt"
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_16"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="Your Bag is Empty !"
                    android:textAlignment="center"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:layout_below="@+id/imageView2" />

                <TextView
                    android:id="@+id/bagss"
                    android:visibility="gone"
                    android:layout_below="@+id/empty_txt"
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_8"
                    android:gravity="center"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:fontFamily="@font/cabin"
                    android:text="@string/add_cart"
                    android:textAlignment="center"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    />

                <RelativeLayout
                    android:id="@+id/btn_shopnow"
                    android:layout_below="@id/bagss"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="@dimen/space_12"
                    android:layout_marginRight="@dimen/space_12"
                    android:layout_marginTop="@dimen/space_16"
                    android:background="@drawable/bg_rounded_button"
                    android:padding="12dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/cabin"
                        android:text="@string/shop_now"
                        android:textColor="#fff"
                        android:textSize="@dimen/space_16" />


                </RelativeLayout>

            </RelativeLayout>



            <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_cart_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/space_10">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_item"
                    android:fontFamily="@font/cabin"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:fontFamily="@font/cabin"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/space_10">

                <TextView
                    android:fontFamily="@font/cabin"
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_total"
                    android:textColor="#000" />
                <TextView
                    android:fontFamily="@font/cabin"
                    android:id="@+id/tv_cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  50"
                    android:textColor="#000" />

<!--                <Fonts.LatoBLack-->
<!--                    android:id="@+id/textView13"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="2dp"-->
<!--                    android:text="@string/currency"-->
<!--                    android:textColor="#000" />-->



            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btn_cart_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_rounded_button"
            android:padding="@dimen/space_5"
            android:text="@string/tv_cart_checkout"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_X_small">

            <TextView
                android:fontFamily="@font/cabin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/checkout"
                android:textColor="#fff"
                android:textSize="@dimen/space_16" />


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>