<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="@dimen/space_10"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/wallet" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_socity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/cabin"
            android:padding="@dimen/space_8"
            android:text="@string/wall_am"
            android:textColor="#000"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:text="@string/currency"
                    android:fontFamily="@font/cabin"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/wallet_ammount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:fontFamily="@font/cabin"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/recharge_wallet"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/bg_rounded_button"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_mywall"
                android:fontFamily="@font/cabin"
                android:textColor="#fff"
                android:textSize="@dimen/space_16" />


        </RelativeLayout>
    </LinearLayout>


</LinearLayout>