<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="beautymentor.in.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
           android:src="@drawable/shapes"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:src="@drawable/beautymentor"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:fontFamily="@font/cabin"
                android:text="Mobile Number"
                android:textColor="#000"
                android:textSize="@dimen/space_16" />
            <ImageView
                android:id="@+id/iconnemail"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/space_10"
                android:src="@drawable/iconn" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt"

               android:layout_centerVertical="true"
                android:background="@drawable/bg_rounded_button"
                android:layout_width="wrap_content"
                android:textSize="@dimen/space_16"
                android:fontFamily="@font/cabin"
                android:padding="@dimen/space_7"
                android:text="+91"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textIsSelectable="false"/>
            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:layout_centerVertical="true"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:layout_toRightOf="@+id/txt"
                android:fontFamily="@font/cabin"
                android:hint="Enter Mobile Number"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/space_10"
                android:textAlignment="center"
                android:textColor="#000"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:text="@string/tv_login_password"
                android:fontFamily="@font/cabin"
                android:textColor="#000"
                android:textSize="@dimen/space_16" />

            <ImageView
                android:id="@+id/iconp"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/space_10"
                android:src="@drawable/iconn" />

        </LinearLayout>


        <EditText
            android:id="@+id/et_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginTop="@dimen/space_4"
            android:background="@drawable/xml_textbox_bg"
            android:ems="10"
            android:hint="Enter Password"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="@dimen/space_10"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorHint="@color/dark_gray"
            android:fontFamily="@font/cabin"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/bg_rounded_button"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btn_continue"
                android:textColor="#fff"
                android:fontFamily="@font/cabin"
                android:textSize="15dp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/bg_rounded_button"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:text="@string/btn_Register"
                android:fontFamily="@font/cabin"
                android:textColor="#fff"
                android:textSize="15dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/btnForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:fontFamily="@font/cabin"
            android:text="@string/forgot"
            android:textColor="@color/pink"
            android:textSize="@dimen/space_16" />
    </LinearLayout>

</RelativeLayout>
